--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OriginSix</title>
 
+    <!-- Icones -->
+    <link rel="stylesheet" href="assets/fonts/style.css" />
+
     <!-- STYLES -->
     <link rel="stylesheet" href="style.css" />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +23,19 @@
     <header id="header">
       <nav class="container">
         <a class="logo" href="#">beauty<span>salon</span>.</a>
-        <div class="menu">...</div>
+        <!-- menu -->
+        <div class="menu">
+          <ul class="grid">
+            <li><a class="title" href="#home">Início</a></li>
+            <li><a class="title" href="#about">Sobre</a></li>
+            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#testimonals">Depoimentos</a></li>
+            <li><a class="title" href="contact">Contatos</a></li>            
+          </ul>
+        </div><!-- /menu -->
+        <div class="toggle icon-menu"></div>
+        <div class="toggle icon-close"></div>
+
       </nav>
     </header>
 
@@ -34,7 +50,7 @@
             />
           </div>            
             <div class="text">
-              <h1>Saúde natural para os seus cabelos</h1>
+              <h2 class="title">Saúde natural para os seus cabelos</h2>
               <p>
                 Um salão exclusivo em São Paulo, especializado em tratamentos
                 naturais.
@@ -47,9 +63,14 @@
 
       <div class="divider-1"></div>
 
-      <section class="section">
-        <div class="container">outra section</div>
+      <section class="section" id="about">
+        <div class="container grid">Sobre</div>
       </section>
+
+      <section class="section" id="services">
+        <div class="container grid" >Services</div>
+      </section>
+
     </main>
   </body>
 </html>
