--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a class="title" href="#about">Sobre</a></li>
             <li><a class="title" href="#services">Serviços</a></li>
             <li><a class="title" href="#testimonals">Depoimentos</a></li>
-            <li><a class="title" href="contact">Contatos</a></li>            
+            <li><a class="title" href="contact">Contato</a></li>            
           </ul>
         </div><!-- /menu -->
         <div class="toggle icon-menu"></div>
@@ -43,7 +43,6 @@
       <section class="section" id="home">
         <div class="container grid">
           <div class="image">
-
             <img
             src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60"
             alt="Mulher sorrindo penteando outra mulher"
@@ -64,13 +63,65 @@
       <div class="divider-1"></div>
 
       <section class="section" id="about">
-        <div class="container grid">Sobre</div>
+        <div class="container grid">
+          <div class="image">
+            <img src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="3 mulheres sorrindo">
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre nós</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita porro magnam, laboriosam aspernatur libero dignissimos nulla excepturi iure numquam odit ut dolor praesentium vel repudiandae suscipit iusto atque eius ab.
+            </p>
+            <br>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem placeat fugiat accusamus cupiditate nisi quia doloremque saepe, provident asperiores veritatis assumenda aut facere fugit obcaecati repellendus dolorum consequuntur quod magni!
+
+            </p>
+            <br>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae sapiente, eveniet sit aperiam ipsum perferendis, unde excepturi ex dolorem totam sed nostrum, commodi asperiores minus quia nisi fuga animi quod.
+            </p>
+          </div>
+        </div>
       </section>
+
+      <div class="divider-2"></div>
 
       <section class="section" id="services">
-        <div class="container grid" >Services</div>
-      </section>
+        <div class="container grid" >
+          <header>
+            <h2 class="title">Serviços</h2>
+            <p>
+              Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais
+            </p>
+          </header>
+          <div class="cards grid">
+            <div class="card">
+              <i class="icon-woman-hair"></i>
+              <h3 class="title">Terapia capilar</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quos sed ducimus amet quam.                
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon-trim"></i>
+              <h3 class="title">Corte</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quos sed ducimus amet quam. 
 
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon-cosmetic"></i>
+              <h3 class="title">Tratamentos</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quos sed ducimus amet quam. 
+              </p>
+            </div>
+          </div>
+  
+        </div>
+      </section>
     </main>
+
+    <script src="main.js"></script>
   </body>
 </html>
