--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- Icones -->
     <link rel="stylesheet" href="assets/fonts/style.css" />
 
+    <!-- Swiper -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
     <!-- STYLES -->
     <link rel="stylesheet" href="style.css" />
 
@@ -18,6 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
   </head>
   <body>
     <header id="header">
@@ -40,6 +44,8 @@
     </header>
 
     <main>
+
+       <!-- Home -->
       <section class="section" id="home">
         <div class="container grid">
           <div class="image">
@@ -62,6 +68,8 @@
 
       <div class="divider-1"></div>
 
+
+       <!-- About -->
       <section class="section" id="about">
         <div class="container grid">
           <div class="image">
@@ -87,6 +95,7 @@
 
       <div class="divider-2"></div>
 
+       <!-- Services -->
       <section class="section" id="services">
         <div class="container grid" >
           <header>
@@ -120,8 +129,71 @@
   
         </div>
       </section>
-    </main>
 
+      <div class="divider-1"></div>
+       <!-- Testimonial -->
+      <section class="section" id="testimonials">
+        <div class="container">
+          <header>
+            <h2 class="title">Depoimentos de quem já passou por aqui</h2>
+          </header>
+          <div class="testimonials swiper-container">
+            <div class="swiper-wrappeer">
+
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem labore fuga aspernatur, voluptate cumque reprehenderit!
+                  </p>
+                  <cite>
+                    <img src="assets/fotos/33.jpg" alt="foto de Wanessa Souza">
+                    Wanessa Souza
+                  </cite>
+                </blockquote>
+              </div>
+  
+              
+              <div class="testimonial swiper-slide">
+                  <blockquote>
+                    <p>
+                      <span>&ldquo;</span>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem labore fuga aspernatur, voluptate cumque reprehenderit!
+                    </p>
+                    <cite>
+                      <img src="https://randomuser.me/api/portraits/men/11.jpg" alt="foto de Gustavo Souza">
+                      Gustavo Souza
+                    </cite>
+                  </blockquote>
+              </div>
+  
+                
+              <div class="testimonial swiper-slide">
+                    <blockquote>
+                      <p>
+                        <span>&ldquo;</span>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem labore fuga aspernatur, voluptate cumque reprehenderit!
+                      </p>
+                      <cite>
+                        <img src="https://randomuser.me/api/portraits/men/44.jpg" alt="foto de Bruno Silva">
+                        Bruno Silva
+                      </cite>
+                    </blockquote>
+              </div>
+            </div>
+
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+
+       <!-- Contact -->
+    </main>
+    <!-- Swiper -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <!-- main.js -->
     <script src="main.js"></script>
   </body>
 </html>
